--- a/.env
+++ b/.env
@@ -6,3 +6,14 @@ API_ACCESS_TOKEN=eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJiN2Q0ZmM3NzllYTVmYzhmYTcxM2VjZT
 
 # omdb
 # https://www.omdbapi.com/?i=tt3896198&apikey=3e1ab75
+
+# axios{//async function
+
+# const data = await axios.get(url),config{
+#     params:{
+#         api_key:process.env.React......
+#     }
+# };
+
+
+# }
