--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
+    "react-star-ratings": "^2.3.0",
     "sass": "^1.57.1",
     "swiper": "^8.4.5"
   },
