--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.6.2",
     "react-star-ratings": "^2.3.0",
     "sass": "^1.57.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
