--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "react-player": "^2.11.0",
     "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.6.2",
     "react-star-ratings": "^2.3.0",
