--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-player": "^2.11.0",
     "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.6.2",
+    "react-spinners": "^0.13.8",
     "react-star-ratings": "^2.3.0",
     "sass": "^1.57.1",
     "swiper": "^8.4.5"
