--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
+		"sourceMap": false,
 		"jsx": "react-jsx",
 		"typeRoots": ["./node_modules/@types", "../custom.d.ts"]
 	},
